# rag-fintech

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  langgraph.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml  mirror-vllm.yml
agent/: claims_orchestrator.py  clause_matcher.py  eligibility_reasoner.py  entity.py  graph_components.py  graph_state.py  graphs.py  medical_agent.py  medical_agent_planner.py  medical_agents.py  medical_alignment_agent.py  medical_base_agent.py  medical_encode_agent.py  medical_normalizer.py  medical_stage_agent.py
agent/tools/: __init__.py  foc_retriever.py  graph_retriever.py  medical_alignment.py  medical_kb.py  tnm_stage4thyroid.py  utils.py  vector_retriever.py
api/: __init__.py  config.py  document_api.py  exception_handlers.py  main.py  note.txt  rag_server.py  response.py  start_server.sh  worker.py
api/db/: persist_file.py  policy_lite.json  policy_mini.json
api/routers/: __init__.py  chat_api.py  claim_api.py  document_api.py  search_api.py
benchmark/: TEST_REPORT.md  analyze_results.ipynb  basic_test.sh  benchmark_tflops.py  prompt_builder.py  run_benchmark.py  start_vllm.sh  stress_test_rag.py  vllm_metrics_template.csv  vllm_minimal_benchmark.md
benchmark/config/: vllm_benchmark_config_minimal.yaml
benchmark/docker/: docker-compose.vllm.yml
benchmark/results/: benchmark_20260220_151345.csv
ci/: .env.example  Dockerfile  Dockerfile.ui  Dockerfile.ui.dockerignore  deploy.sh  docker-compose.yaml  nginx.conf
ci/conf/: service_conf.yaml
ci/k8s/: alicloud-dist-essd-pl0.yml  api-deployment.yml  cluster-role-hami.yml  configmap.yml  ingress.yml  milvus-values.yaml  namespace.yml  pvc-hf-cache.yml  pvc-s3-storage.yml  stress-test-foc-job.yml  stress-test-job.yml  ui.yml  vllm-35B-deployment.yml  vllm-9B-deployment.yml  vllm-deployment.yml  vllm-hpa.yml  worker-deployment.yml
ci/scripts/: download_models.sh
common/: __init__.py  app_context.py  config.py  config_utils.py  constants.py  converter.py  decorator.py  device_utils.py  error_codes.py  exceptions.py  file_utils.py  log_middleware.py  log_utils.py  model_registry.py  prompt_manager.py  settings.py  utils.py
conf/: llm_factories.json  milvus_graph_mapping.json  milvus_mapping.json  service_conf.yaml
conf/prompts/: claim_extraction.yaml  claim_reasoning.yaml  clause_selection.yaml  clause_selection_opt.yaml  graph_extraction.yaml  llm_extraction.yaml  llm_parse.yaml  llm_qa.yaml  llm_qa_eval.yaml  query_rewrite.yaml
docs/adr/: 0001-introduce-observation-module.md  0002-enable-hybrid-search.md  ARCHITECTURE.md  FoC_sharing.md  README.md  TECHNICAL_DECISION_REPORT.md  TEMPLATE.md
graphrag/: entity_alignment.py  extractor.py  graph_extractor.py  index.py  utils.py
k8s/: api-deployment.yml  configmap.yml  ingress.yml  namespace.yml  worker-deployment.yml
observation/: alloy-autodl.alloy  milvus-dashboard.json  vLLM-dashboard.json
observation/perf/: onnx_on_cpu.ipynb  onnx_on_gpu.ipynb
rag/: dependencies.py
rag/core/: __init__.py  doc_service.py  embedding_service.py  storage_service.py
rag/embedding/: __init__.py  dense_embedder.py  sparse_embedder.py
rag/entity/: __init__.py  api_parsed_document.py  clause_tree.py  document.py  (+1 more)
service/: dependencies.py  llm_service.py
tests/: conftest.py  test_log_middleware.py  test_markdown_splitter.py  test_metadata_creator.py  test_parser.py  test_parser_extractor.py  test_parser_registry.py  test_rule_extractor.py  test_serializer_deserializer.py
tools/: extract_snomed.py  import_icd10cn.py  import_snomed.py
ui/: index.html  package-lock.json  package.json
vllm/: docker-compose.autodl.yml  docker-compose.vllm.yml  start_vllm.sh
(+164 files in other folders)
